--- a/extension/food-price-scout/manifest.json
+++ b/extension/food-price-scout/manifest.json
@@ -6,20 +6,10 @@
   "permissions": ["activeTab", "scripting"],
   "host_permissions": ["*://*.doordash.com/*"],
   "action": {
-    "default_popup": "popup/popup.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    }
+    "default_popup": "popup/popup.html"
   },
   "background": {
     "service_worker": "service_worker.js"
-  },
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
   },
   "content_scripts": [
     {
