--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,20 +1,11 @@
 {
   "manifest_version": 3,
   "name": "DoorDash Deal Finder",
+  "version": "1.0.1",
   "description": "Find the lowest prices and fastest delivery times on DoorDash.",
-  "version": "1.0.0",
-  "action": {
-    "default_popup": "popup.html",
-    "default_title": "DoorDash Deal Finder"
-  },
-  
-  "permissions": ["activeTab", "scripting"],
+  "action": { "default_popup": "popup.html" },
+  "permissions": ["activeTab", "scripting", "tabs"],
   "host_permissions": ["*://*.doordash.com/*"],
-  "content_scripts": [
-    {
-      "matches": ["*://*.doordash.com/*"],
-      "js": ["content.js"],
-      "run_at": "document_idle"
-    }
-  ]
+  
+
 }
